<resources>
    <string name="app_name">A-STAR-Fitness</string>
    <string name="title">A-Star Fitness</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(lb)</string>
    <string name="sitWork">Sit Work</string>
    <string name="moveWork">Move Work</string>
    <string name="balanceWork">Balance Work</string>
    <string name="athletic">Athletic</string>
    <string name="attractive">Attractive</string>
    <string name="healthy">Healthy</string>
    <string name="submit">Submit</string>

    <string name="update">Update</string>
</resources>